--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-./spikes/*
-.rvmrc
-.ruby-version
-.ruby-gemset
+/.bundle/
+/.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+
+# rspec failure tracking
+.rspec_status
+
 Gemfile.lock
-pkg
-coverage
