--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /.bundle/
+/.vscode/
 /.yardoc
 /_yardoc/
 /coverage/
@@ -9,5 +10,7 @@
 
 # rspec failure tracking
 .rspec_status
+
+.rubocop.yml
 
 Gemfile.lock
