--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ env:
 sudo: false
 language: ruby
 rvm:
-  - 2.5.0
-  - jruby-19mode
-before_install: gem install bundler -v 1.16.1
+  - 2.5.5
+  - 2.6.3
+  - 2.7.0-preview
+  - jruby-9.2.7.0
+before_install: gem install bundler
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
