--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -31,6 +31,6 @@ jobs:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Check code style
-      run: bundle exec standard
+      run: bundle exec standardrb
     - name: Run tests
       run: bundle exec rake
